Cleaning up bottom promo bar html. Fixing html nesting issues with H1. Changed the external links from a group of A's with pipe's between them  to an unordered list with css defined content separators. Expanded the html template in index.js so it was all visible instead of all on one line.

--- a/src/evolve.less
+++ b/src/evolve.less
@@ -1389,6 +1389,16 @@ body .modal > div.popper.wide {
         span {
             margin: 0 .5rem;
         }
+
+        .external-links {
+            li {
+                display: inline-block;
+            }
+
+            li + li:before {
+                content: ' | ';
+            }
+        }
     }
 }
 
